@@ -3,6 +3,7 @@
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="simplemanagement.policy">
 
@@ -10,6 +11,8 @@
   <includeDependencies package="." />
 
   <i18n:registerTranslations directory="locales" />
+
+  <cmf:registerDirectory name="simplemanagement" />
 
   <!-- Register an extension profile to make the product installable
        in Plone -->
