@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_skins" allow_any="False" cookie_persistence="False">
+
+  <object name="simplemanagement"
+        meta_type="Filesystem Directory View"
+        directory="simplemanagement.policy:skins/simplemanagement"/>
+
+  <skin-path name="*">
+    <layer name="simplemanagement"
+           insert-after="custom"/>
+  </skin-path>
+
+</object>
