@@ -4,6 +4,7 @@ Changelog
 1.0 - Unreleased
 ----------------
 
+* overrode temporarily inline_validation.js see.:https://github.com/plone/Products.CMFPlone/pull/56 [giorgio]
 * added test users [giorgio]
 * check if c.transmogrifier is installed [giorgio]
 * switch simplemanagement to collective namespace
